      if they are nearby and not activatable, or drag from the hero to a nearby
      NPC no matter if they are activatable or not. [James]
    * Slices can be marked as Templates, which makes them hidden and ignored for
      almost all purposes. Intended for use with "clone slice". [Ralph]

   * New Plotscripting Features
    * "dir X", "dir Y" [Ralph]

  *** Changes
    * Removed support for optional prefixes on .ini config settings (e.g.
      "fullscreen" instead of "gfx.fullscreen"), game-specific prefixes (e.g.
      "edit.game_vikings."), and placing ohrrpgce_config.ini next to the .rpg.
      Too complex! [Ralph]
    * When you import a slice collection with forbidden slices they are cleaned
      up for you, rather than not importing and telling you to clean it [Ralph]

  *** Bugfixes
    * Various gfx_sdl2 window size/position/resizing and mouse glitches when
      entering/exiting fullscreen (e.g. bug #1190) [Ralph]
    * Re-did "mouse region" handling under gfx_sdl2 so the mouse moves/accelerates
      normally, and switching fullscreen/windowed doesn't break it.
      Also, entering a debug menu now pauses "mouse region" [Ralph]
    * Various gfx_fb bugfixes, including screen fades not happening, fullscreen
      not working at some zooms or picking awful aspect ratio wrong mouse cursor
      position and visibility in fullscreen, broken display at 1x zoom, and
      freezing. Thankfully noone uses gfx_fb. [Ralph]
    * Fix #1219 Global NPCs now properly support one-time-use tags [James]
    * Editing a single global NPC definition from NPC placement mode didn't save
      changes and caused crashes. Plus other global NPC bugfixes. [Ralph]
    * Global NPCs didn't reload while using Test Game. [Ralph]
    * At higher resolutions the map layers would be cropped to 320x200 for a
      tick when exiting the Spells, Equip or Save/Load menus [Ralph]
    * "free slice(0)" no longer shows a warning, I mean it this time! [Ralph]
